# course_paper_2

./: README.md  pyproject.toml
src/: main.py  mod_class.py  module_class.py  program_file.py  utils.py
tests/: test_.py  test_list_operations.py  test_main.py  test_mod_class.py  test_operations_executed.py  test_utils.py
