[tool.poetry]
name = "course-paper-2"
version = "0.1.0"
description = ""
authors = ["evgeni <9232485@gmail.com>"]
readme = "README.md"
packages = [{include = "course_paper_2"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
